# PerchLab

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
notebooks/: 00_species_identification_guided.ipynb  01_embed_audio.ipynb  02_classify_and_export.ipynb  03_benchmark.ipynb  04_optimal_threshold_guided.ipynb
notebooks/data/outputs/perch_id_run/: manifest.json
notebooks/perchID/: manifest.json
src/perchlab/: __init__.py  _bootstrap.py  _quiet.py  audio.py  classify.py  cli.py  config.py  detections.py  embedding.py  errors.py  inference.py  logging.py  models.py  preprocess.py  prompts.py  segments.py  taxonomy.py  util.py
src/perchlab/benchmark/: __init__.py  dataset.py  evaluate.py  metrics.py  plots.py  report.py  sweep.py
src/perchlab/io/: __init__.py  raven.py  tables.py
src/perchlab/threshold/: __init__.py  collect.py  dataset.py  plots.py  report.py  stats.py
src/perchlab/workflows/: __init__.py  base.py  benchmark.py  embed.py  identify.py  threshold.py
tests/: __init__.py  conftest.py  test_models.py  test_pipeline.py  test_threshold.py  test_workflows.py
